# o-controller

./: .dockerignore  .env.example  .gitignore  README.md  o-control-desktop-companion-plan.md  package-lock.json  package.json  tsconfig.base.json
.agents/: README.md  claude-code-tasks.md  codex-uiux-tasks.md  merge-review-checklist.md  project.md  task-index.md
.agents/tasks/: 01-reference-audit.md  02-eiscp-protocol-package.md  03-service-api.md  04-desktop-ui-shell.md  05-test-harness.md  06-presets-shortcuts.md  07-web-debug-ui.md  08-docker-homelab.md  09-raycast-extension.md  10-now-playing.md  11-nas-usb-browser-spike.md
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  service_manager.rs
apps/raycast/: package.json  raycast-env.d.ts  tsconfig.json
apps/web/: index.html  package.json
docs/: cr-n775-artwork-format.md  deployment-n100.md  feature-scope.md  nas-usb-browser-spike.md  presets.md  protocol-notes.md  prototype-plan.md  raycast.md  reference-audit.md  uiux-onkyo-hires-reference.md  uiux-plan.md  uiux-spec.md  uiux-web-debug.md
docs/tasks/: desktop-ui-refresh-onkyo-reference.md  home-volume-now-playing.md  macos-native-packaging.md  prototype-verification-fixes.md  settings-device-management.md
docs/uiux-review/: README.md  desktop-qa.md  desktop-ui-refresh-verify.md
infra/docker/: Dockerfile  docker-compose.yml
tests/integration/: disconnect-reconnect.test.ts  service-mock.test.ts
(+29 files in other folders)
