[package]
name = "o-control-desktop"
version = "0.1.0"
description = "Native shell for O-Control"
authors = ["maxsaigon"]
edition = "2021"

[lib]
name = "o_control_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
